Cleanup code generation